Set y to copy to system clipboard

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -98,12 +98,12 @@ bind-key -T root WheelDownPane \
 # unbind-key -t vi-copy MouseDragEnd1Pane
 
 # stay in copy mode on drag end, but otherwise exit for mouse up
-# unbind-key -t vi-copy MouseDragEnd1Pane
-# bind-key -t vi-copy MouseUp1Pane cancel
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+unbind-key -t vi-copy MouseDragEnd1Pane
+bind-key -t vi-copy MouseUp1Pane cancel
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # copy selected content to system clipboard
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "reattach-to-user-namespace pbcopy"
 # bind-key -t vi-copy MouseDragEnd1Pane run -b "tmux 'copy-selection -x'"
 
 # mouse copy to system clipboard (osx only)
