--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -30,6 +30,8 @@
 	<true/>
 	<key>NSFontPanelAttributes</key>
 	<string>1, 4</string>
+	<key>NSFontPanelSizeSliderParams</key>
+	<string>2 0 100</string>
 	<key>NSNavLastRootDirectory</key>
 	<string>~/Repos/dotfiles/iterm</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
@@ -53,7 +55,7 @@
 		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
 		hAErATGG
 		</data>
-		<string>322</string>
+		<string>307</string>
 	</array>
 	<key>NSTableView Hidden Columns KeyBingingTable</key>
 	<array/>
@@ -65,21 +67,39 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>1426 101 445 77 0 0 2560 1440 </string>
+	<string>867 201 770 323 0 0 2560 1440 </string>
+	<key>NSWindow Frame Preferences</key>
+	<string>1227 965 606 456 0 0 2560 1440 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
-	<string>2031 1124 400 129 0 0 2560 1440 </string>
+	<string>1601 1123 400 129 0 0 2560 1417 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>970 787 620 392 0 0 2560 1440 </string>
-	<key>NSWindow Frame SessionsPreferences</key>
-	<string>269 76 599 519 0 0 2560 1440 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>191 954 796 473 0 0 2560 1440 </string>
+	<string>529 638 796 473 0 0 2560 1440 </string>
+	<key>NSWindow Frame com.apple.typography_panel_CourierNewPSMT</key>
+	<string>776 1179 260 87 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 810 604 0 0 2560 1440 </string>
+	<string>0 0 1000 679 0 0 2560 1440 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>1565 97 892 667 0 0 2560 1440 </string>
+	<string>339 376 710 667 0 0 2560 1440 </string>
+	<key>NSWindow Frame iTerm Window 10</key>
+	<string>18 13 585 950 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>1019 59 710 667 0 0 2560 1440 </string>
+	<string>130 410 710 667 0 0 2560 1440 </string>
+	<key>NSWindow Frame iTerm Window 3</key>
+	<string>937 202 710 667 0 0 2560 1440 </string>
+	<key>NSWindow Frame iTerm Window 4</key>
+	<string>2634 122 1075 1077 2560 0 2560 1417 </string>
+	<key>NSWindow Frame iTerm Window 5</key>
+	<string>212 129 1019 1273 0 0 2560 1417 </string>
+	<key>NSWindow Frame iTerm Window 6</key>
+	<string>1494 230 1047 376 0 0 2560 1417 </string>
+	<key>NSWindow Frame iTerm Window 7</key>
+	<string>597 530 585 306 0 0 2560 1417 </string>
+	<key>NSWindow Frame iTerm Window 8</key>
+	<string>8 530 585 306 0 0 2560 1417 </string>
+	<key>NSWindow Frame iTerm Window 9</key>
+	<string>622 10 585 950 0 0 2560 1417 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -867,7 +887,7 @@
 			<key>Close Sessions On End</key>
 			<true/>
 			<key>Columns</key>
-			<integer>100</integer>
+			<integer>90</integer>
 			<key>Command</key>
 			<string></string>
 			<key>Cursor Color</key>
@@ -916,7 +936,7 @@
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
-			<string>tmux new -A -s "gifcast" "tmux split -v -p 100; tmux split -v -l 3; tmux split -t 2 -v -l 1 -b; tmux selectp -t 2; tmux send-keys -t 3 'watch -t -n 60 echo' Enter; tmux send-keys -t 4 'watch -t -n 60 echo' Enter; tmux set pane-active-border-fg '#333333'"</string>
+			<string>tmux new -A -s "gifcast" "tmux new-window 'bash -i'; tmux send-keys 'watch -t -n 60 echo' Enter; tmux split -v -p 100; tmux split -v -l 3; tmux send-keys 'watch -t -n 60 echo' Enter; tmux selectp -t 2; tmux set pane-active-border-fg '#333333'"</string>
 			<key>Jobs to Ignore</key>
 			<array>
 				<string>rlogin</string>
@@ -1216,7 +1236,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>SourceCodePro-Light 14</string>
+			<string>SourceCodePro-Light 19</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prevent Opening in a Tab</key>
@@ -1226,7 +1246,7 @@
 			<key>Right Option Key Sends</key>
 			<integer>0</integer>
 			<key>Rows</key>
-			<integer>30</integer>
+			<integer>25</integer>
 			<key>Screen</key>
 			<integer>-1</integer>
 			<key>Scrollback Lines</key>
@@ -1287,16 +1307,36 @@
 			<string>/Users/pbuell</string>
 		</dict>
 	</array>
+	<key>NoSyncCommandHistoryHasEverBeenUsed</key>
+	<true/>
+	<key>NoSyncConfirmBeta</key>
+	<true/>
 	<key>NoSyncDoNotWarnBeforeMultilinePaste</key>
 	<true/>
 	<key>NoSyncDoNotWarnBeforeMultilinePaste_selection</key>
 	<integer>0</integer>
+	<key>NoSyncHaveShownPromoWithId_4</key>
+	<true/>
+	<key>NoSyncInstallUtilitiesPackage</key>
+	<true/>
+	<key>NoSyncInstallUtilitiesPackage_selection</key>
+	<integer>0</integer>
 	<key>NoSyncInstallationId</key>
-	<string>07757747-036E-4BEB-ACB7-88CC02763A31</string>
+	<string>945F1D52-7CB7-4DA7-B0EE-4B03A1B9BFC1</string>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
+	<true/>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
+	<integer>1</integer>
 	<key>NoSyncPermissionToShowTip</key>
 	<false/>
+	<key>NoSyncSilenceAnnoyingBellAutomatically</key>
+	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>490754998.88330698</real>
+	<real>478104795.87505198</real>
+	<key>NoSyncTimeOfLastPromo</key>
+	<real>478102260.55858201</real>
+	<key>NoSyncTimeOfLastPromoDownload</key>
+	<real>478102252.93947798</real>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -1339,13 +1379,11 @@
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/final.xml?shard=2</string>
+	<string>https://iterm2.com/appcasts/final.xml?shard=64</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-08-24T20:25:47Z</date>
-	<key>SUSendProfileInfo</key>
-	<false/>
+	<date>2016-08-26T13:57:24Z</date>
 	<key>SplitPaneDimmingAmount</key>
 	<real>0.12756410256410261</real>
 	<key>TabStyle</key>
