--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "dotfiles/vim/bundle/vim-expand-region"]
 	path = dotfiles/vim/bundle/vim-expand-region
 	url = https://github.com/terryma/vim-expand-region.git
+[submodule "vim-blade"]
+	path = vim-blade
+	url = https://github.com/jwalton512/vim-blade.git
