Fix wj pj functions, change def screenshots loc

--- a/.config.example
+++ b/.config.example
@@ -9,6 +9,9 @@ KBLayout = qwerty
 # paths
 NonRepoProjects = ~/Workshop
 NotesFolder     = "~/Google\\ Drive/Notes"
+PersonalJournal = "~/Goodle\\ Drive/Journal/personal"
+WorkJournal     = "~/Goodle\\ Drive/Journal/work"
+
 
 # git bits
 GitUsername = codybuell
