--- a/.config.example
+++ b/.config.example
@@ -8,6 +8,7 @@ KBLayout = qwerty
 
 # paths
 NonRepoProjects = ~/Workshop
+TasksFolder     = "~/Google\\ Drive/Tasks"
 NotesFolder     = "~/Google\\ Drive/Notes"
 PersonalJournal = "~/Google\\ Drive/Journal/personal"
 WorkJournal     = "~/Google\\ Drive/Journal/work"
