--- a/dotfiles/todo/todo.cfg
+++ b/dotfiles/todo/todo.cfg
@@ -1,7 +1,7 @@
 # === EDIT FILE LOCATIONS BELOW ===
 
 # Your todo.txt directory
-export TODO_DIR="{{ TasksFolder }}"
+export TODO_DIR="tasks"
 
 # Your todo/done/report.txt locations
 export TODO_FILE="$TODO_DIR/todo.txt"
