Add clipper support

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -101,6 +101,7 @@ bind-key -T root WheelDownPane \
 unbind-key -t vi-copy MouseDragEnd1Pane
 bind-key -t vi-copy MouseUp1Pane cancel
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key y run-shell "tmux save-buffer - | nc localhost 8377"
 
 # copy selected content to system clipboard
 # bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "reattach-to-user-namespace pbcopy"
