Add alias for checkout

--- a/ssh/config
+++ b/ssh/config
@@ -1,12 +1,28 @@
-Host *
-    UseKeychain yes
+################################################################################
+#                                                                              #
+# HOSTS                                                                        #
+#                                                                              #
+################################################################################
 
-#host [alias]
-#    User ubuntu
-#    Hostname [ip | hostname]
-#    Compression yes
-#    TCPKeepAlive yes
-#    ForwardX11 yes
-#    ForwardX11Truted yes
-#    ServerAliveInterval 30
-#    IdentityFile ~/.ssh/[keyname]
+# host [alias]
+#   User ubuntu
+#   Hostname [ip | hostname]
+#   Compression yes
+#   TCPKeepAlive yes
+#   ForwardX11 yes
+#   ForwardX11Truted yes
+#   ServerAliveInterval 30
+#   IdentityFile ~/.ssh/[keyname]
+
+################################################################################
+#                                                                              #
+# DEFAULTS                                                                     #
+#                                                                              #
+################################################################################
+
+Host *
+  UseKeychain yes
+  UseKeychain yes
+  Compression yes
+  TCPKeepAlive yes
+  ServerAliveInterval 30
