Updated tmux configs for new version

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -20,8 +20,8 @@ bind -n S-Down previous-window
 # use vi navigation and search in scroll mode ctrl-b [
 setw -g mode-keys vi
 set -g status-keys vi
-bind-key -t vi-edit Up   history-up
-bind-key -t vi-edit Down history-down
+bind-key -T edit-mode-vi Up send-keys -X history-up
+bind-key -T edit-mode-vi Down send-keys -X history-down
 
 # pre-defined sessions ctrl-b [N]
 bind A source-file ~/.tmux/administration
@@ -97,21 +97,38 @@ bind-key -T root WheelDownPane \
 # unbind-key -t vi-copy MouseUp1Pane
 # unbind-key -t vi-copy MouseDragEnd1Pane
 
-# stay in copy mode on drag end, but otherwise exit for mouse up
-unbind-key -t vi-copy MouseDragEnd1Pane
-bind-key -t vi-copy MouseUp1Pane cancel
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-#bind-key y run-shell "tmux save-buffer - | nc localhost 8377"
+# stay in copy mode on drag end, exit on escape
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+bind-key -T copy-mode-vi Escape send-keys -X cancel
 
-# copy selected content to system clipboard
-# bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "reattach-to-user-namespace pbcopy"
-# bind-key -t vi-copy MouseDragEnd1Pane run -b "tmux 'copy-selection -x'"
+# copy methods for selected text
+unbind-key -T copy-mode-vi DoubleClick1Pane
+#unbind-key -T copy-mode-vi TripleClick1Pane
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi DoubleClick1Pane send-keys -t{mouse} -X select-word\; send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi TripleClick1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
-# mouse copy to system clipboard (osx only)
-# bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
+# middle click exit copy mode and paste, in normal mode paste
+unbind-key -T root MouseUp2Pane
+unbind-key -T copy-mode-vi MouseUp2Pane
+bind-key -T root MouseUp2Pane paste-buffer
+bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel\; paste-buffer
+
+# alternative if you want to exit copy mode after pressing y or selecting
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# Make double and triple click work outside of copy mode (already works inside it with default bindings).
+bind-key -T root DoubleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-word; send-keys -X copy-pipe \"reattach-to-user-namespace pbcopy\""
+bind-key -T root TripleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-line"
 
 # mouse copy to system clipboard (linux only)
-# bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -in -selection clipboard"
+#bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -in -selection clipboard"
+
+# scroll 3 lines at a time instead of default 5; don't extend dragged selections
+bind-key -T copy-mode-vi WheelUpPane select-pane\; send-keys -t{mouse} -X clear-selection\; send-keys -t{mouse} -X -N 3 scroll-up
+bind-key -T copy-mode-vi WheelDownPane select-pane\; send-keys -t{mouse} -X clear-selection\; send-keys -t{mouse} -X -N 3 scroll-down
 
 ################################################################################
 #                                                                              #
