Add some custom word separators

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -130,6 +130,10 @@ bind-key -T root TripleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-ke
 bind-key -T copy-mode-vi WheelUpPane select-pane\; send-keys -t{mouse} -X clear-selection\; send-keys -t{mouse} -X -N 3 scroll-up
 bind-key -T copy-mode-vi WheelDownPane select-pane\; send-keys -t{mouse} -X clear-selection\; send-keys -t{mouse} -X -N 3 scroll-down
 
+# word delimiters, second option is neccessary to append a ', default is ` -_@'.
+set-window-option -g word-separators ' "=,()[]'
+set-window-option -ag word-separators "'"
+
 ################################################################################
 #                                                                              #
 # WINDOWING                                                                    #
