Replace hex colors with shell colour values
Should support base16 color themes now.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -43,11 +43,11 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ',xterm-256color:Tc'
 
 # theming
-set -w -g window-status-current-fg '#cd5c5c'
-set -g status-bg '#333333'
-set -g status-fg '#ffffff'
-set -g pane-border-fg '#333333'
-set -g pane-active-border-fg '#cd5c5c'
+set -w -g window-status-current-fg colour1
+set -g status-bg colour18
+set -g status-fg colour245
+set -g status-bg colour18
+set -g pane-active-border-fg colour1
 
 ################################################################################
 #                                                                              #
