Add calendar vim submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "dotfiles/vim/bundle/vimwiki"]
 	path = dotfiles/vim/bundle/vimwiki
 	url = https://github.com/vimwiki/vimwiki.git
+[submodule "dotfiles/vim/bundle/calendar-vim"]
+	path = dotfiles/vim/bundle/calendar-vim
+	url = https://github.com/mattn/calendar-vim.git
