--- a/.config.example
+++ b/.config.example
@@ -1,40 +1,97 @@
-# personal information
-Name        = Cody Buell
-Email       = cody@codybuell.com
-OSUsername  = codybuell
+# Dotfiles Configuration File
+#
+# This configuration file is used to customize your set of dotfiles.
+# Throughout each dotfile are snippets in the format of `{{ VarName }}` that
+# get replaced with the values below when running `make dots` or another make
+# method that calls the `scripts/connect-the-dots.sh` script.
 
-# keyboard layout (qwerty|colemak)
-KBLayout = qwerty
+################################################################################
+#                                                                              #
+# personal information                                                         #
+#                                                                              #
+################################################################################
 
-# paths
-NonRepoProjects = "~/Workshop"
+Name        = Cody Buell                                # your full name
+Email       = cody@codybuell.com                        # preferred email
+OSUsername  = codybuell                                 # your system username
+
+################################################################################
+#                                                                              #
+# keyboard layout                                                              #
+#                                                                              #
+################################################################################
+
+KBLayout = qwerty                                       # [ qwerty | colemak ]
+
+################################################################################
+#                                                                              #
+# paths                                                                        #
+#                                                                              #
+# variable          cli   vim    description                                   #
+# ---------------------------------------------------------------------------- #
+# TasksFolder       t     -     loc for tasks created by Todo.txt-cli          #
+# NotesFolder       note  ␣n    general markdown notes / notes vim wiki        #
+# CodexFolder       -     -     personal markdown notes / codex vim wiki       #
+# NonRepoProjects   ws    -     projects that are not git repos                #
+# PersonalJournal   pj    ␣pj   root location of personal journal*             #
+# WorkJournal       wj    ␣wj   root location of work journal*                 #
+#                                                                              #
+#   * journals have a subdir structure of YYYY/MM/YYYY.MM.DD.txt               #
+#                                                                              #
+################################################################################
+
 TasksFolder     = "/Users/usrnm/Google Drive/Tasks"     # full path, no escapes
 NotesFolder     = "~/Google\\ Drive/Notes"
 CodexFolder     = "~/Google\\ Drive/Codex"
-ProjectsFolder  = "~/Google\\ Drive/Projects"
+NonRepoProjects = "~/Google\\ Drive/Projects"
 PersonalJournal = "~/Google\\ Drive/Journal/personal"
 WorkJournal     = "~/Google\\ Drive/Journal/work"
 
-# git bits
-GitUsername = codybuell
-ReposPath   = ~/Repos
-GistsPath   = ~/Gists
+################################################################################
+#                                                                              #
+# git configurations                                                           #
+#                                                                              #
+################################################################################
 
-# api tokens
+GitUsername = codybuell                                 # github username
+ReposPath   = ~/Repos                                   # folder for git repos
+GistsPath   = ~/Gists                                   # folder for git gists
+
+################################################################################
+#                                                                              #
+# api tokens                                                                   #
+#                                                                              #
+################################################################################
+
 GitHubHomebrewAPIToken = 1234567890abcdefghijklmnopqrstuvwxyz
 
-# hashicorp vault
-#VaultCAPath  = ???
+################################################################################
+#                                                                              #
+# hashicorp vault                                                              #
+#                                                                              #
+################################################################################
+
+#VaultCAPath = ???
 VaultToken   = 1234567890abcdefghijklmnopqrstuvwxyz
 VaultAddress = https://vaultserver.tld:8200
 VaultServer  = vaultserver.tld
 
-# ddclient
+################################################################################
+#                                                                              #
+# ddclient                                                                     #
+#                                                                              #
+################################################################################
+
 DDClientLogin    = 1234567890abcdef
 DDClientPassword = ghijklmnopqrstuv
 DDClientFQDN     = hostname.codybuell.com
 
-# homestead
+################################################################################
+#                                                                              #
+# homestead configuration                                                      #
+#                                                                              #
+################################################################################
+
 VMIP       = 192.168.10.10
 VMCPUs     = 1
 VMMemory   = 2048
@@ -43,6 +100,17 @@ PublicKey  = ~/.ssh/id_rsa.pub
 PrivateKey = ~/.ssh/id_rsa
 MapFrom    = ~/Repos
 MapTo      = /home/vagrant/Repos
+
+################################################################################
+#                                                                              #
+# homestead application configurations                                         #
+#                                                                              #
+# Currently only four applications may be configured.  This is not a           #
+# limitation of homestead / vagrant.  If you need additional vm's, you will    #
+# need to update `~/.homestead/Homestead.yaml` manually and reprovision the    #
+# machine with `homestead provision`.                                          #
+#                                                                              #
+################################################################################
 
 # homestead server one (don't forget to update /etc/hosts)
 AppName01     =  homestead.app
@@ -64,10 +132,31 @@ AppName04     =  homestead.app
 AppWebRoot04  =  /home/vagrant/Repos/Laravel/public
 AppDatabase04 =  homestead
 
-# paths to create
+################################################################################
+#                                                                              #
+# paths to create                                                              #
+#                                                                              #
+# You can create up to 100 paths, simply increment the variable name.  Paths   #
+# are created with the -p flag, so all subdirs will be created as needed.      #
+#                                                                              #
+################################################################################
+
 PATH00 = /Users/usrnm/.gopath
 
-# extra symlinks, increment numbers as needed, fully pathed SRC DST
+################################################################################
+#                                                                              #
+# symlinks to create                                                           #
+#                                                                              #
+# You can create up to 100 symlinks, simply increment the variable name.       #
+# Each symlink should be in the format:                                        #
+#                                                                              #
+#     SYMLINK[NN] = [source path] [destination path]                           #
+#                                                                              #
+# Destination parent folders must already exist, use path configs above as     #
+# needed.                                                                      #
+#                                                                              #
+################################################################################
+
 SYMLINK00 =  /Users/usrnm/Repos/mit/mit /Users/usrnm/.todo/addons/mit
 SYMLINK01 =  /Users/usrnm/Repos/bin /Users/usrnm/Bin
 SYMLINK02 =  /Users/usrnm/Bin /Users/usrnm/.gopath/bin
