Add work layout for tmux, weechat, and work journal

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -28,6 +28,7 @@ bind A source-file ~/.tmux/administration
 bind D source-file ~/.tmux/development
 bind L source-file ~/.tmux/logs
 bind G source-file ~/.tmux/gifcast
+bind W source-file ~/.tmux/work
 
 ################################################################################
 #                                                                              #
