Reduce escape key wait time

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,5 +1,14 @@
 ################################################################################
 #                                                                              #
+# GENERAL CONFIGS                                                              #
+#                                                                              #
+################################################################################
+
+# dont wait for escape key as part of a key sequence
+set -sg escape-time 0
+
+################################################################################
+#                                                                              #
 # BINDINGS                                                                     #
 #                                                                              #
 ################################################################################
